--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,11 +2,11 @@
 spring:
   jpa:
     show-sql: true
-    hibernate.ddl-auto: none
+    hibernate.ddl-auto: create-drop
     database-platform: org.hibernate.dialect.H2Dialect
     properties.hibernate.format_sql: true
   h2:
-    console.enabled: true
+    console.enabled: false
       #path: /h2-console
   datasource:
     url: jdbc:h2:mem:devdb
@@ -21,10 +21,7 @@ spring:
     date-format: yyyy-MM-dd'T'HH:mm:ss.SSSXXX
     time-zone: Europe/Berlin
   liquibase:
-      enabled: true
-      change-log: classpath:/db/changelog/changelog-master.yml
-
-management.endpoints.web.exposure.include: "*"
+      enabled: false
 
 logging:
   path: ${user.home}
@@ -37,8 +34,8 @@ logging:
     org.springframework.web.client.RestTemplate: DEBUG
 
 fixerio:
-  access-key: 62bc67dcbc99f2007bcc430064c7065d
-  host: data.fixer.io
+  access-key: test-key
+  host: localhose:9996
   scheme: http
   http-connection-timeout: 3000
   http-read-timeout: 3000
