Adding following changes: - adding fixer-io client tests, improve client configuration. - improving category and product controller unit tests. - adding integration tests. - adding readme file.

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -13,6 +13,10 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/changelog-master.yml
+  security:
+    user.name: lucianomda
+    user.password: eae.pP
+    user.roles: ADMIN
 
 server.tomcat.max-threads: 20
 
