--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 		<apache-httpcomponents-httpasyncclient.version>4.1.4</apache-httpcomponents-httpasyncclient.version>
 		<pl-pragmatists-junitparams.version>1.1.1</pl-pragmatists-junitparams.version>
 		<hamcrest-date.version>2.0.5</hamcrest-date.version>
+		<io-rest-assured.version>3.3.0</io-rest-assured.version>
+		<io-rest-assured-json-path.version>3.3.0</io-rest-assured-json-path.version>
+		<org-exparity-hamcrest-date.version>2.0.5</org-exparity-hamcrest-date.version>
+		<mock-server-mockserver-netty.version>3.10.8</mock-server-mockserver-netty.version>
+		<mockserver-client-java.version>3.10.8</mockserver-client-java.version>
+		<mockserver-maven-plugin.version>3.10.8</mockserver-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -119,7 +125,36 @@
 			<version>${pl-pragmatists-junitparams.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>${io-rest-assured.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>json-path</artifactId>
+			<version>${io-rest-assured-json-path.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.exparity</groupId>
+			<artifactId>hamcrest-date</artifactId>
+			<version>${org-exparity-hamcrest-date.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mock-server</groupId>
+			<artifactId>mockserver-netty</artifactId>
+			<version>${mock-server-mockserver-netty.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mock-server</groupId>
+			<artifactId>mockserver-client-java</artifactId>
+			<version>${mockserver-client-java.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -134,7 +169,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
 			</plugin>
-
 		</plugins>
 	</build>
 </project>
